exports[`Chat button state > react > the button is inactive without Hubspot widget #0`] = `
<button
  type="button"
  class="ui-btn-secondary self-start mt-16"
  disabled=""
  data-id="open-chat-widget"
  data-enabled-label="Start a live chat"
  data-disabled-label="Live chat unavailable"
>
  Live chat unavailable
</button>
`;

exports[`Chat button state > react > the button is inactive without Hubspot widget #1`] = `
<button
  type="button"
  class="ui-btn-secondary p-btn-small mt-16 opacity-30"
  data-unavailable="Live chat unavailable"
  data-id="open-chat-widget"
  disabled="true"
>
  Live chat unavailable
</button>
`;

exports[`Chat button state > vw > the button is inactive without Hubspot widget #0`] = `
<button
  type="button"
  class="ui-btn-secondary self-start mt-16"
  disabled=""
  data-id="open-chat-widget"
  data-enabled-label="Start a live chat"
  data-disabled-label="Live chat unavailable"
>
  Live chat unavailable
</button>
`;
